--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 *.[pP][yY][cC]
 
 ###################
+# ecmwf
+###################
+*.grib
+
+###################
 # poetry git ignore
 ###################
 
