--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: A Collection of Python Examples
+title: Dynamic Heterogeneous Agents Equilibrium Models
 google_analytics: UA-92953468-11
 plugins:
   - jekyll-sitemap
