--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
 *.[jJ][pP][gG]
 *.[cC][sS][vV]
-*.[tT][xX][tT]
+#*.[tT][xX][tT]
 *.[pP][yY][cC]
-
-###################
-# ecmwf
-###################
-*.grib
 
 ###################
 # poetry git ignore
@@ -42,7 +37,7 @@ pip-log.txt
 
 /setup.cfg
 MANIFEST.in
-/setup.py
+#/setup.py
 /docs/site/*
 /tests/fixtures/simple_project/setup.py
 /tests/fixtures/project_with_extras/setup.py
